cmss/main/default/objects/PicklistValue__c/PicklistValue__c.object-meta.xml
<CustomObject>
    <label>Picklist Value</label>
    <nameField>
        <displayFormat>PV-{0000}</displayFormat>
        <label>Picklist Value Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Picklist Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>