cmss/main/default/objects/PicklistValue__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>kód z číselníku</description>
    <label>Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>