cmss/main/default/objects/PicklistValue__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>unikátní složenina Type__c a ~ a Code__c</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>