cmss/main/default/objects/PicklistValue__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>0 jestli je hodnota (ExternalId__c) už/ještě neaktívní</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>