cmss/main/default/objects/PicklistValue__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>popis z číselníku</description>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>