cmss/main/default/objects/PicklistValue__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>typ číselníku</description>
    <label>Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>